# katas

./: .gitignore  Gemfile  _config.yml  index.md  legal.md  package.json  readme.md  tsconfig.json
_data/: navigation.yml  sitetext.yml  style.yml
_portfolio/: 1-string-calculator.md  2-bowling-game.md  3-gilded-rose.md
_site/: 404.html  feed.xml  index.html  legal.html
advanced-gilded-rose/: readme.md
advanced-gilded-rose/c-sharp/: Advanced.Gilded.Rose.sln
advanced-gilded-rose/database/: create-database.sql  dockerfile  start-database.sh  stop-database.sh
advanced-gilded-rose/js/: config.json  index.spec.js  package-lock.json  package.json
advanced-gilded-rose/kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
advanced-gilded-rose/ts/: config.json  index.spec.ts  index.ts  package.json  (+2 more)
bowling-game/: README.md
countries/: countries-explorer.md
gilded-rose-with-tests/: README.md  readme.md
insurance/: insurance-claim-kata.md  readme.md
roman-numerals/: README.md
string-calculator/: README.md  string-calculator-requirement-1.txt  string-calculator-requirement-2.txt  string-calculator-requirement-3.txt  string-calculator-requirement-4.txt  string-calculator-requirement-5.txt  string-calculator-requirement-9.txt  string-calculator-requirements-2.txt  string-kata-4.txt  string-kata-6.txt  string-kata-7.txt  string-kata-8.txt
string-calculator/python/: pyproject.toml
string-calculator/python/tests/: test_string_calculator.py
string-kata/: string-kata-1.txt  string-kata-3.txt
sudoku/: readme.md
whiteboard/: whiteboard-kata.md
(+98 files in other folders)
