[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Bryce Klinker <bklinker@efuneral.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
taskipy = "^1.8.2"

[tool.taskipy.tasks]
test = "pytest tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
